# obsigil-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/obsigil/: __init__.py  _constants.py  aead.py  core.py  encoding.py  errors.py  keys.py  manifest.py  mint.py  serial.py  token.py  uuid7.py  verify.py
tests/: test_conformance.py  test_docs.py  test_encoding.py  test_keys.py  test_roundtrip.py  test_serial.py  test_token.py  test_validation.py
