[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsigil"
version = "0.2.0"
description = "Pure-Python implementation of the obsigil mandate-token format (AES-SIV / AES-GCM-SIV)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [{ name = "Bojan Đuričković" }]
keywords = ["obsigil", "mandate", "token", "aes-siv", "aes-gcm-siv", "jwt", "credential"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=42.0",
    "cbor2>=5.4",
]
[project.urls]
Homepage = "https://obsigil.org"
Repository = "https://gitlab.com/obsigil/obsigil-py"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/obsigil"]

[tool.hatch.build.targets.sdist]
# Ship only the package, tests, README, changelog, and licenses — not
# dev cruft (.claude/, .iloc-cache.json, caches). pyproject.toml is
# always included.
only-include = ["src", "tests", "README.md", "CHANGELOG.md", "LICENSE-MIT", "LICENSE-APACHE"]
